# speech-analysis-tool

./: .gitignore  Readme.md  main.py  pyproject.toml  requirementsy
analysis_tool/: main.py  params.py
analysis_tool/audio/: audio_parser.py  mistakes.py  openai_api.py  utils.py  volume_analyzer.py
analysis_tool/mistakes/: extract_mistakes.py  mistakes.py  models.py
analysis_tool/text/: mistakes.py  text_errors_parser.py
analysis_tool/text/tests/: test_transcript_analysis.py
analysis_tool/video/: mistakes.py  mp4_parser.py  video_parser.py
