[tool.poetry]
name = "speech-analysis-tool"
version = "0.1.0"
description = ""
authors = ["Konrad Z <konradz321@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
opencv-python = "4.10.0.84"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
